<resources>
    <string name="app_name">Secreto</string>

    <string name="check_your_internet_connection">Check your internet connection</string>
    <string name="something_went_wrong">Something went wrong. Please try again</string>
    <string name="retry">Retry</string>
    <string name="loading">Loading&#8230;</string>
    <string name="please_wait">Please wait&#8230;</string>

    <!-- LocationBaseActivity -->
    <string name="permission_required_by_application_denied">Permission required by application denied</string>
    <string name="application_requires_access_to_device_location">Application requires access to device location to display list of pharmacies near by you.</string>
    <string name="location_service_is_not_turned_on">Device location service is not turned on.</string>
    <string name="no_location_detected">No Location detected.</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="permission_granted">Permisssion granted</string>
    <string name="permission_denied">Permission denied</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="select_photo">Select photo</string>
    <string name="home">Home</string>

    <!-- LoginActivity -->

    <string name="email_id_user_name">Email Id/User Name</string>
    <string name="email_id">Email Id</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="forgot_password_q">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account"><![CDATA[<xml><blue-regular>Don\'t have an account? </blue-regular><dark-blue-bold><u>SIGN UP</u></dark-blue-bold></xml>]]></string>
    <string name="password_can_not_be_left_blank">Password can not be left blank.</string>
    <string name="user_name_can_not_be_left_blank">User name can not be left blank</string>
    <string name="user_name_can_not_be_same_as_nick_name">User name can not be same as nick name</string>
    <string name="email_id_or_username_can_not_be_left_blank">Email id/User Name can not be left blank</string>
    <string name="email_id_can_not_be_left_blank">Email id can not be left blank</string>
    <string name="invalid_email_id_format">Invalid email format</string>
    <string name="logout">Logout</string>
    <string name="signing_in">Signing in…</string>

    <!-- SignUpActivity -->
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="contact_number_optional">Contact Number(optional)</string>
    <string name="contact_number">Contact Number</string>
    <string name="first_name_can_not_be_left_blank">First Name can not be left blank.</string>
    <string name="entered_first_name_is_invalid">Entered First Name  is invalid.</string>
    <string name="last_name_can_not_be_left_blank">Last Name can not be left blank.</string>
    <string name="entered_last_name_is_invalid">Entered Last Name is invalid.</string>
    <string name="mobile_phone_number_can_not_be_left_blank">Mobile Phone Number can not be left blank.</string>
    <string name="mobile_phone_number_should_be_of_10_digits">Mobile Phone Number should be of 10 digits.</string>
    <string name="password_security_criteria_are_not_met">Password security criteria\’s are not met. Please reenter.</string>
    <string name="password_criteria">Password Criteria</string>
    <string name="password_criteria_desc">Should contain 1 upper case, 1 special character, minimum length 6, maximum length 15</string>
    <string name="confirm_password_can_not_be_left_blank">Confirm Password can not be left blank.</string>
    <string name="password_and_confirm_password_does_not_match">Password and confirm password does not match, Please try again.</string>
    <string name="create_account">Create Account</string>
    <string name="i_have_read_and_agree_to"><![CDATA[<xml><light-grey>I have read and agree to the </light-grey><terms-of-use>TERMS OF USE</terms-of-use><light-grey> and </light-grey><privacy-policy>PRIVACY POLICY</privacy-policy></xml>]]></string>
    <string name="please_agree_to_terms_of_use">Please agree to Terms of use and Privacy policy.</string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="name">Nick Name</string>
    <string name="nick_name_can_not_be_left_blank">Nick name can not be left blank</string>
    <string name="user_successfully_registered">User successfully registered</string>
    <string name="settings">Settings</string>
    <string name="about_us">About us</string>
    <string name="other">Other</string>
    <string name="terms_policy">Terms &amp; privacy policy</string>
    <string name="help_feedback">Help &amp; feedback</string>
    <string name="notifications">Notifications</string>
    <string name="alert">Alert</string>
    <string name="sure_to_logout">Are you sure you want to logout?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="change_password"><u>Change password?</u></string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="reset">Reset</string>
    <string name="please_enter_your_password">Please enter your current password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="please_confirm_your_password">Please confirm your password</string>
    <string name="pass_confirm_pass_validation">Confirm password is not same</string>
    <string name="remember_me">Remember me</string>
    <string name="login_with_facebook">Login with facebook</string>
    <string name="browse">Browse</string>
    <string name="send">Send</string>
    <string name="leave_a_message">Leave a message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message_can_not_be_left_blank">Message can not be left blank</string>
    <string name="user_name">User Name</string>
    <string name="find_user">Find User</string>
    <string name="next">Next</string>
    <string name="back_pressagain_to_exit">BACK PRESS again to exit from application</string>

    <!-- Time -->
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="just_now">just now</string>
    <string name="yesterday">yesterday</string>
    <string name="you_can_not_send_message_to_yourself">You can not send message to yourself</string>
    <string name="text_search">Find user</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_gender">Select Gender</string>
    <string name="submit">Submit</string>
    <string name="user_details_updated_successfully">User details successfully updated</string>
    <string name="search">Search</string>
    <string name="status">Status</string>
    <string name="my_profile">My Profile</string>
    <string name="please_enter_cool_status">Please enter cool status</string>
    <string name="give_hint_for_your_identity">Guess me if you can (OPTIONAL)</string>
    <string name="allow_to_get_reply">Allow to get reply from %1$s</string>
    <string name="search_user_message">Search users by their name,email or user name</string>
    <string name="no_users_not_found">No users found</string>
    <string name="sender">Sender</string>
    <string name="please_share_your_profile_to_send_or_receive_messages">Please share your profile to send or receive messages</string>
    <string name="x_profile">%s\'s Profile</string>
    <string name="to_x">To : %s</string>
    <string name="share_profile">Share profile</string>
    <string name="hey_guys_please_share_your_views_about_me">Hey Guys please share your views about me .. %s</string>
    <string name="compose_message">Compose Message</string>
    <string name="by">By :</string>
    <string name="account_settings">Account Settings</string>
    <string name="off_notification_message">Are you sure you want to turn off the notifictaions?</string>
    <string name="delete_your_account">Delete your account</string>
    <string name="delet_account_confrim_message">Are you sure you want to delete your account?</string>
    <string name="please_provide_your_valuable_feedback">Please provide your valuable feedback</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="are_you_sure_you_want_to_delete_this_message">Are you sure you want to delete this message</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="anonymous_sender">Anonymous Sender</string>
    <string name="signing_up">Signing up…</string>
    <string name="share_message_using">Share Message Using</string>
    <string name="delete">delete</string>
    <string name="reply">Reply</string>
    <string name="share">Share</string>
</resources>
