<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notifications"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_languages"
            android:title="@string/edit_profile" />
    </group>

    <group
        android:id="@+id/grp2"
        android:checkableBehavior="single"
        android:title="@string/other">
        <item
            android:id="@+id/nav_about_us"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_privacy_policy"
            android:title="@string/terms_policy" />
        <item
            android:id="@+id/nav_feedback"
            android:title="@string/help_feedback" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout" />
    </group>
</menu>