<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.secreto.activities.EditProfileActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:fillViewport="true"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dimen_size_44"
            android:paddingRight="@dimen/dimen_size_44">

            <com.secreto.widgets.CustomFontTextView
                android:id="@+id/tvAppName"
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:padding="@dimen/dimen_size_10"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_40"
                android:textStyle="bold"
                android:visibility="gone"
                app:fontStyle="StylishfontRegular" />

            <com.secreto.utils.NetworkImageView
                android:id="@+id/iv_profileImg"
                android:layout_width="@dimen/dimen_size_80"
                android:layout_height="@dimen/dimen_size_80"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_size_20"
                app:roundedCorner="true"
                app:roundedCornerDP="40" />

            <com.secreto.widgets.CustomFontTextView
                android:id="@+id/tvUserName"
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dimen_size_10"
                android:text="userName" />

            <com.secreto.widgets.CustomFontEditText
                android:id="@+id/etClue"
                style="@style/LoginEditStyle"
                android:layout_marginTop="@dimen/dimen_size_20"
                android:background="@drawable/red_rectangle_with_white_background"
                android:gravity="top"
                android:hint="@string/give_hint_for_your_identity"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine|textCapSentences"
                android:lines="1"
                android:maxLines="2" />

            <com.secreto.widgets.CustomFontEditText
                android:id="@+id/etMessage"
                style="@style/LoginEditStyle"
                android:layout_marginTop="@dimen/dimen_size_20"
                android:background="@drawable/red_rectangle_with_white_background"
                android:gravity="top"
                android:hint="@string/leave_a_message"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine|textCapSentences"
                android:lines="5"
                android:maxLines="5" />

            <com.secreto.widgets.CustomFontCheckBox
                android:id="@+id/allowCheckBox"
                style="@style/TextViewStyle"
                android:text="@string/allow_to_get_reply" />

            <com.secreto.widgets.CustomFontButton
                android:id="@+id/tvSend"
                style="@style/ButtonStyle"
                android:layout_marginTop="@dimen/dimen_size_20"
                android:text="@string/send" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

