<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center">

    <LinearLayout
        android:layout_width="@dimen/dimen_size_300"
        android:layout_height="wrap_content"
        android:background="@drawable/white_rounded_border"
        android:orientation="vertical"
        android:padding="@dimen/dimen_size_20">

        <RelativeLayout
            android:id="@+id/headerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <com.secreto.widgets.CustomFontTextView
                android:id="@+id/alertDialog_title_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dimen_size_20"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:padding="@dimen/dimen_size_5"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/text_size_16"
                app:fontStyle="StylishfontRegular"
                app:textAllCaps="false" />


            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="@dimen/dimen_size_35"
                android:layout_height="@dimen/dimen_size_35"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/dimen_size_10"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:visibility="visible" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_size_15"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_size_10"
                android:textColorHint="@color/gray"
                app:errorEnabled="true">

                <com.secreto.widgets.CustomFontEditText
                    android:id="@+id/et_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/status"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:textColor="@color/dark_gray"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/text_size_14"
                    app:fontStyle="fontRegular" />
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:id="@+id/btnLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                android:weightSum="2">

                <com.secreto.widgets.CustomFontButton
                    android:id="@+id/btn_ok"
                    style="@style/DefaultButtonStyle"
                    android:layout_weight="1"
                    android:text="@string/ok" />

                <com.secreto.widgets.CustomFontButton
                    android:id="@+id/btn_cancel"
                    style="@style/DefaultButtonStyle"
                    android:layout_marginLeft="@dimen/dimen_size_10"
                    android:layout_weight="1"
                    android:text="@string/cancel" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>